fix contact info spacing for 650px+ vp

--- a/rehearsal-room-frontend/src/components/Space/Space.scss
+++ b/rehearsal-room-frontend/src/components/Space/Space.scss
@@ -39,6 +39,7 @@
 
   .contact-info {
     text-align: center;
+    padding-top: 3%;
   }
 
   .space-info {
